@@ -1854,7 +1854,7 @@ public class CompactionManager implements CompactionManagerMBean
     {
         public ValidationExecutor()
         {
-            super(1, Integer.MAX_VALUE, "ValidationExecutor", new SynchronousQueue<Runnable>());
+            super(1, DatabaseDescriptor.getConcurrentValidations(), "ValidationExecutor", new SynchronousQueue<Runnable>());
         }
     }
 
@@ -1973,6 +1973,12 @@ public class CompactionManager implements CompactionManagerMBean
             executor.setCorePoolSize(value);
             executor.setMaximumPoolSize(value);
         }
+    }
+
+    public void setConcurrentValidations(int value)
+    {
+        value = value > 0 ? value : Integer.MAX_VALUE;
+        validationExecutor.setMaximumPoolSize(value);
     }
 
     public int getCoreCompactorThreads()
