@@ -1,4 +1,5 @@
 4.0
+ * Add configurable upper bound for validation executor threads (CASSANDRA-13521)
  * Bring back maxHintTTL propery (CASSANDRA-12982)
  * Add testing guidelines (CASSANDRA-13497)
  * Add more repair metrics (CASSANDRA-13531)
